# ANBScouts--GITHUB-

./: .env_example  .gitlab-ci.yml  README.md  api-entrypoint.sh  pyproject.toml  run-tests.sh
capacity-planning/: plan_de_pruebas.md
collections/: ANB.postman_collection.json
docker/: docker-compose.yml  dockerfile.api  dockerfile.celery  dockerfile.db  nginx.conf
migrations/versions/: d6782041a24c_initial_migration.py
reports/: report.html
src/: app.py  auth.py
src/core/: celery_config.py
src/models/: __init__.py  main.py
src/public/: __init__.py  main.py
src/scripts/: generate_mock_data.py
src/tasks/: __init__.py  task.py
src/video/: __init__.py  main.py
tests/: test_main.py
tests/auth/: test_auth.py
tests/public/: test_public.py
tests/video/: test_videos.py
